<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_vasooli_vasool_it">Vasool It</string>
    <string name="feature_vasooli_yet_to_vasool">Yet to Vasool</string>
    <string name="feature_vasooli_total_udhaar">Total Udhaar : ₹%s</string>
    <string name="feature_vasooli_due_amount_x" >Due Amount : ₹%s</string>
    <string name="feature_vasooli_total_amount_y">/₹%s</string>
    <string name="feature_vasooli_last_repayment_x">Last Repayment : ₹%s</string>
    <string name="feature_vasooli_last_repayment_default">Last Repayment : NA</string>
    <string name="feature_vasooli_hisab_kitab">Hisab Kitab</string>
    <string name="feature_vasooli_currency_sign">₹</string>
    <string name="feature_vasooli_currency_sign_x">\u20B9%.2f</string>
    <string name="feature_vasooli_currency_sign_x_int">\u20B9%d</string>
    <string name="feature_vasooli_fully_repaid">Fully Repaid</string>
    <string name="feature_vasooli_no_entries_found">No entries found</string>
    <string name="feature_vasooli_have_you_lended_any_money">Have you lent any money?</string>
    <string name="feature_vasooli_click_on_the_add_new_button">Click on the Add new button to add it here</string>
    <string name="feature_vasooli_add_new">Add New</string>
    <string name="feature_vasooli_intro_title_1">Bhai thode paise\nmilenge kya?</string>
    <string name="feature_vasooli_intro_title_2">So you’ve given your friend udhaar,\n\nbut getting it back seems very far?</string>
    <string name="feature_vasooli_intro_title_3">Let us talk to them.\nSo you don’t have to.</string>
    <string name="feature_vasooli_intro_desc_1">-Every friend ever.</string>
    <string name="feature_vasooli_intro_desc_3">Kyuki Bhagwan ka diya hua\nsab kuch hai. Aur ab vasooli\nke liye Jar bhi.</string>
    <string name="feature_vasooli_skip">Skip</string>
    <string name="feature_vasooli_lets_vasool_it">Let’s Vasool it</string>
    <string name="feature_vasooli_paise_kisko_diye">Paise kisko diye</string>
    <string name="feature_vasooli_phone_number">Phone number</string>
    <string name="feature_vasooli_select_a_contact">Select a contact</string>
    <string name="feature_vasooli_reminder_on_your_behalf">We will send them reminders on your behalf</string>
    <string name="feature_vasooli_name">Name</string>
    <string name="feature_vasooli_enter_name">Enter Name</string>
    <string name="fetaure_vasooli_enter_amount">Enter Amount</string>
    <string name="feature_vasooli_amt_hint">0 0 0 0 0 0 0</string>
    <string name="feature_vasooli_loan_taken_on">Loan taken on</string>
    <string name="feature_vasooli_select_a_date">Select a date</string>
    <string name="feature_vasooli_due_date">Due date</string>
    <string name="feature_vasooli_no_app_found">No app found to handle the request.</string>
    <string name="feature_vasooli_save">Save</string>
    <string name="feature_vasooli_failed_to_get_contact">Failed to get contact. Please try again.</string>
    <string name="feature_vasooli_lending_date">Select lending date</string>
    <string name="feature_vasooli_select_due_date">Select due date</string>
    <string name="feature_vasooli_date_mismatch">Lending date can\'t be greater than due date</string>
    <string name="feature_vasooli_due_on_x">Due on: %s</string>
    <string name="feature_vasooli_repayment_received">Repayment Received</string>
    <string name="feature_vasooli_new_repayment">New Repayment</string>
    <string name="feature_vasooli_inteha_hogayi_nintezar_ki_right">Inteha hogayi\nintezar ki, right?</string>
    <string name="feature_vasooli_let_s_send_a_reminder">Let’s send a reminder.</string>
    <string name="feature_vasooli_previous_repayments">Previous Repayments</string>
    <string name="feature_vasooli_repayment">Repayment</string>
    <string name="feature_vasooli_paid_with_x">Paid with: %s</string>
    <string name="feature_vasooli_details">Details</string>
    <string name="fetaure_vasooli_no_repayment_title">Did you receive a repayment?</string>
    <string name="feature_vasooli_no_repayment_description">Make an entry by pressing the\n“New Repayment” button</string>
    <string name="feature_vasooli_repayment_amount">Repayment Amount</string>
    <string name="feature_vasooli_date">Date</string>
    <string name="feature_vasooli_upi">UPI</string>
    <string name="feature_vasooli_card">Card</string>
    <string name="feature_vasooli_cash">Cash</string>
    <string name="feature_vasooli_other">Other</string>
    <string name="feature_vasooli_add_repayment">Add repayment</string>
    <string name="feature_vasooli_payment_mode">Payment Mode</string>
    <string name="feature_vasooli_select_payment_mode">Select payment mode</string>
    <string name="feature_vasooli_repayment_greater_than_due">Repayment amount can\'t be greater than due amount</string>
    <string name="feature_vasooli_edit_details">Edit Details</string>
    <string name="feature_vasooli_mark_as_fully_paid">Mark as fully paid</string>
    <string name="feature_vasooli_mark_as_default">Mark as default</string>
    <string name="feature_vasooli_delete_record">Delete Record</string>
    <string name="feature_vasooli_yes">Yes</string>
    <string name="feature_vasooli_dismiss">Dismiss</string>
    <string name="feature_vasooli_mark_as_paid_prompt">Pakka?\nAa gaye paise?</string>
    <string name="feature_vasooli_mark_as_default_prompt">Are you sure you want\n to mark it as default?</string>
    <string name="feature_vasooli_delete_prompt">Are you sure you want\n to delete this entry?</string>
    <string name="feature_vasooli_yes_paise_vasool">Yes, Paisa Vasool</string>
    <string name="feature_vasooli_nahi_yaar">Nahi Yaar!</string>
    <string name="feature_vasooli_payment_mode_kya_tha">Payment Mode kya tha?</string>
    <string name="feature_vasooli_default">Default</string>
    <string name="feature_vasooli_you_marked_as_default">You marked this entry as default</string>
    <string name="feature_vasooli_reminders">Reminders</string>
    <string name="feature_vasooli_change_image">Change Image</string>
    <string name="feature_vasooli_loan_date_first">Please select loan date first</string>
    <string name="feature_vasooli_read_more">....read more</string>
    <string name="feature_vasooli_read_less">....read less</string>
    <string name="feature_vasooli_enter_valid_amount">Enter valid amount</string>
    <string name="feature_vasooli_amount_cannot_be_greater_than_x">Amount cannot be greater than %s</string>
    <string name="feature_vasooli_recording_payment">Recording payment</string>
    <string name="feature_vasooli_prompt_des">This entry is just to record the money you have sent or received outside of Jar.\n\nThis will not send the borrower any type of payment request or impact Jar locker balance.</string>
    <string name="feature_vasooli_enter_amount_will_not_send_money">Entering amount here will not send or request money <u>know more</u></string>
    <string name="feature_vasooli_reminder_sent_successfully">Reminder sent successfully</string>

    <string name="feature_vasooli_need_contact_access">We need permission to proceed further on the app</string>
    <string name="feature_vasooli_intro_title_2_new">So you gave your dost udhaar.\n\But kal kal bolke dost cheating karta hai. Haina?</string>
</resources>