<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:background="@color/bgColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar_default_revamped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enter_amount_heading"
        style="@style/CommonTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:inputType="textCapCharacters"
        android:text="@string/feature_vasooli_repayment_amount"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAmount"
        style="@style/EditTextKycStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_black_bg_12dp"
        android:drawableStart="@drawable/feature_vasooli_ic_rupee_circle"
        android:gravity="start|center_vertical"
        android:hint="@string/feature_vasooli_amt_hint"
        android:inputType="number"
        android:minHeight="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="80dp"
        android:maxLength="7"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/enter_amount_heading" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/amount_sub_heading"
        style="@style/CommonTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/feature_vasooli_ic_bulb"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/feature_vasooli_enter_amount_will_not_send_money"
        android:textColor="@color/color_ACA1D3"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/etAmount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date_heading"
        style="@style/CommonTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:text="@string/feature_vasooli_date"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/amount_sub_heading" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        style="@style/EditTextKycStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_black_bg_12dp"
        android:drawableEnd="@drawable/core_ui_ic_calender"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="start|center_vertical"
        android:hint="@string/feature_vasooli_select_a_date"
        android:minHeight="60dp"
        android:paddingStart="20dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/date_heading" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/payment_mode_heading"
        style="@style/CommonTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:text="@string/feature_vasooli_payment_mode"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPaymentMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:orientation="horizontal"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="4"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toBottomOf="@id/payment_mode_heading"
        tools:listitem="@layout/cell_payment_mode" />

    <com.jar.app.core_ui.widget.button.CustomButtonV2
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        app:buttonText="@string/feature_vasooli_save"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide" />

</androidx.constraintlayout.widget.ConstraintLayout>