<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bgColor">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/feature_vasooli_ic_no_loans" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CommonTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="20dp"
        android:text="@string/feature_vasooli_no_entries_found"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="25dp"
        android:background="@color/color_3c3357"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CommonBoldTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/feature_vasooli_have_you_lended_any_money"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CommonTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_ACA1D3"
        android:gravity="center"
        android:text="@string/feature_vasooli_click_on_the_add_new_button"/>

</androidx.appcompat.widget.LinearLayoutCompat>