<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingVertical="16dp"
    android:background="@drawable/rounded_black_bg_8dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotalUdhaar"
        style="@style/CommonTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        tools:text="@string/feature_vasooli_total_udhaar" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/color_3c3357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalUdhaar"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading_repayment_received"
        style="@style/SmallTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        android:text="@string/feature_vasooli_repayment_received"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRepaymentAmount"
        style="@style/CommonTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/heading_repayment_received"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        tools:text="₹2000" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading_yet_to_vasool"
        style="@style/SmallTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        android:text="@string/feature_vasooli_yet_to_vasool"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDueAmount"
        style="@style/BigTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/heading_repayment_received"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        tools:text="₹2000" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressLoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDueAmount"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        android:layout_marginTop="16dp"
        app:trackCornerRadius="5dp"
        app:trackThickness="5dp"
        app:indicatorColor="@color/color_ebb46a"
        app:indicatorDirectionLinear="startToEnd"
        app:trackColor="@color/color_3c3357"/>

</androidx.constraintlayout.widget.ConstraintLayout>